--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   firebase_auth: ^0.16.1
   firebase_storage: ^3.1.6
   provider: ^4.1.3+1
+  flappy_search_bar: ^1.7.2
   
 
 dev_dependencies:
