--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,8 +33,7 @@ dependencies:
   image_picker: ^0.6.7+2
   firebase_auth: ^0.16.1
   firebase_storage: ^3.1.6
-  provider: ^4.1.3+1
-  flappy_search_bar: ^1.7.2
+  provider: ^4.3.0
   
 
 dev_dependencies:
